added responsivness. still no color or further styling. still need to learn about form data

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="center-screen">
         <h1>Totally Trivial Trivia</h1>
-        <h2 id="timer">60 Seconds Remaining</h2>
         <form id="form">
+            <h2 id="timer">60 Seconds Remaining</h2>
             <!-- Question One -->
             <div class="row question">
                 <h3>Which geometric shape is used for stop signs?</h3>
@@ -65,18 +65,17 @@
             </div>
 
 
-            <input id="submitButton" type="submit" value="Submit">
+            <input id="submitBtn" type="submit" value="Submit">
 
         </form>
         <button id="startBtn">START</button>
-        <div id="gameStats" class="row">
+        <div id="gameStats">
             <p id="correct"> Correct Answers: </p>
             <p id="incorrect">Incorrect Answers: </p>
             <p id="unanswered">Unanswered: </p>
             <button id="restartBtn">RESTART</button>
 
         </div>
-    </div>
 </body>
 
 </html>
