did my best to add css. i have no artistic ability at all

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </form>
         <button id="startBtn">START</button>
         <div id="gameStats">
-            <p id="correct"> Correct Answers: </p>
-            <p id="incorrect">Incorrect Answers: </p>
-            <p id="unanswered">Unanswered: </p>
+            <h4 id="correct"> Correct Answers: </h4>
+            <h4 id="incorrect">Incorrect Answers: </h4>
+            <h4 id="unanswered">Unanswered: </h4>
             <button id="restartBtn">RESTART</button>
 
         </div>
