this is fucking frustrating. how do i this so i can add the score at the end of the game

--- a/index.html
+++ b/index.html
@@ -16,52 +16,49 @@
         <form id="form">
             <h2 id="timer">60 Seconds Remaining</h2>
             <!-- Question One -->
-            <div class="row question">
-                <h3>Which geometric shape is used for stop signs?</h3>
-                <input type="radio" id="square" name="shape" value="incorrect">
-                <label for="square">Square</label>
-                <input type="radio" id="triangle" name="shape" value="incorrect">
-                <label for="triangle">Triangle</label>
-                <input type="radio" id="octagon" name="shape" value="correct">
-                <label for="octagon">Octagon</label>
-                <input type="radio" id="hexagon" name="shape" value="incorrect">
-                <label for="hexagon">Hexagon</label>
+            <div class="row">
+                <h3 id="question">Which geometric shape is used for stop signs?</h3>
+                <input type="radio" id="a" class="option" name="option">
+                <label for="a">Square</label>
+                <input type="radio" id="b" class="option" name="option">
+                <label for="b">Triangle</label>
+                <input type="radio" id="correct" class="option" name="option">
+                <label for="correct">Octagon</label>
+                <input type="radio" id="d" class="option" name="option">
+                <label for="d">Hexagon</label>
             </div>
-            <!-- Question Two -->
-            <div class="row question">
+            <div class="row">
                 <h3>What is cynophobia?</h3>
-                <input type="radio" id="dog" name="fear" value="correct">
-                <label for="dog">Fear of Dogs</label>
-                <input type="radio" id="cats" name="fear" value="incorrect">
+                <input type="radio" id="correct" class="option" name="fear">
+                <label for="correct">Fear of Dogs</label>
+                <input type="radio" id="cats" class="option" name="fear">
                 <label for="cats">Fear of Cats</label>
-                <input type="radio" id="height" name="fear" value="incorrect">
+                <input type="radio" id="height" class="option" name="fear">
                 <label for="height">Fear of Heights</label>
-                <input type="radio" id="dentist" name="fear" value="incorrect">
+                <input type="radio" id="dentist" class="option" name="fear">
                 <label for="dentist">Fear of Dentists</label>
             </div>
-            <!-- Question 3 -->
-            <div class="row question">
+            <div class="row">
                 <h3>Who named the Pacific Ocean?</h3>
-                <input type="radio" id="ferdinandTheBull" name="person" value="incorrect">
+                <input type="radio" id="ferdinandTheBull" class="option" name="person">
                 <label for="ferdinandTheBull">Ferdinand the Bull</label>
-                <input type="radio" id="ferdinandMagellan" name="person" value="correct">
+                <input type="radio" id="ferdinandMagellan" class="option" name="person">
                 <label for="ferdinandMagellan">Ferdinand Magellan</label>
-                <input type="radio" id="franzFerdinand" name="person" value="incorrect">
+                <input type="radio" id="franzFerdinand" class="option" name="person">
                 <label for="Franz Ferdinand">Franz Ferdinand</label>
-                <input type="radio" id="ferdinandMarcos" name="person" value="incorrect">
+                <input type="radio" id="ferdinandMarcos" class="option" name="person">
                 <label for="ferdinandMarcos">Ferdinand Marcos</label>
             </div>
-            <!-- Question 4 -->
-            <div class="row question">
+            <div class="row">
                 <h3>What is the biggest tech company in South Korea?</h3>
-                <input type="radio" id="lenovo" name="company" value="incorrect">
+                <input type="radio" id="lenovo" class="option" name="company">
                 <label for="lenovo">Lenovo</label>
-                <input type="radio" id="huawei" name="company" value="incorrect">
+                <input type="radio" id="huawei" class="option" name="company">
                 <label for="huawei">Huawei</label>
-                <input type="radio" id="mitsibushi" name="company" value="incorrect">
+                <input type="radio" id="mitsibushi" class="option" name="company">
                 <label for="mitsibushi">Mitsibushi</label>
-                <input type="radio" id="samsung" name="company" value="correct">
-                <label for="samsung">Samsung</label>
+                <input type="radio" id="correct" class="option" name="company">
+                <label for="correct">Samsung</label>
             </div>
 
 
